# endstone-player-tp

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/endstone_player_tp/: __init__.py  config.toml  teleport.py
